--- a/styles/global.css
+++ b/styles/global.css
@@ -8,3 +8,13 @@
 body {
   background: #fcfcfc;
 }
+
+button {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
